feat 解除全部对Action操作,更改接口日志描述,整体优化减少代码 fix picture权限修改,添加eventDepartment错误 暂时关闭不需要还未完成接口